# AD_Management

./: README.md
Contracts/: address.txt  foundry.toml
Contracts/broadcast/DeployMain.sol/11155111/: run-1743342686.json  run-1743348063.json  run-1743915000.json  run-1743919525.json  run-1743927313.json
Contracts/script/: DeployMain.sol
Contracts/src/: ADRegistry.sol  ADVerification.sol  ERC20.sol  RewardDistribution.sol  UserProfile.sol  main.sol
Engine/: .env  Cargo.toml  data.json
Engine/ads/: metadata.json
Engine/metadata.db/: 000054.sst  000114.sst  000213.sst  000340.sst  000355.sst  001060.sst  001070.sst  001080.sst  001098.sst  001103.sst  001108.sst  001113.sst  001123.sst  001133.sst  001204.sst  001214.sst  001224.sst  001239.sst  001244.sst  001249.sst  001254.sst  001264.sst  001274.sst  001279.sst  001306.sst  001325.sst  001360.sst  001427.sst  001482.sst  001509.sst  001538.sst  IDENTITY  LOG  LOG.old.1743518605136002  LOG.old.1743518605167272  LOG.old.1743518605198535  LOG.old.1743518605230315  LOG.old.1743518605265759  LOG.old.1743518605301639  LOG.old.1743518605333346  (+351 more)
Engine/src/: ads.rs  db.rs  main.rs  sample.rs  sample_metadata.rs  test.rs  transactions.rs
User-Interest-Data-Collector/: README.md  background.js  content.js  manifest.json  popup.html  popup.js
ad-categorization-api/: requirements.txt  run.py
ad-categorization-api/app/: categorizer.py  config.py  main.py  models.py
website/: index.html
